v0.9.2 (WIP):

    BUGFIX: Editor: Correctly initialize 'width' for view resize code (thx @gnif)




v0.9.1 (2022-08-27):

    CHANGE: Remove unwanted extra frame height from node bottom

    CHANGE: Allow to specify if links of deleted node should also be automatically deleted
        Now it is possible to delete only node without automatically serving links,
        application can choose to do this operation by itself and for example
        short circuit flow links ot do any other special operation.

    CHANGE: Canvas: Allow to overlap canvas widget

    CHANGE: Natvis: Move crude_json natvis to separate file

    CHANGE: Natvis: Show readable NodeId/PinId/LinkId

    CHANGE: Make Navigate action to honor duration

    CHANGE: Travis: Use Ubuntu Bionic (18.04) for CI, to get newer version of GLFW3

    CHANGE: Editor: Make action button internally configurable

    CHANGE: Make Node Editor forward compatible with ImGui 1.80+ (#112)
        We're keeping backward compatibility with pre 1.8x versions.

    CHANGE: Update internal copy ImGui to 1.84 (WIP) (3512f2c2c283ec86) (#107)
        Internal copy has two PR's merged:
            https://github.com/thedmd/imgui/tree/feature/layout      - used in blueprints example only
            https://github.com/thedmd/imgui/tree/feature/extra-keys  - optional: used by Node Editor if present

    CHANGE: Use github actions instead of Travis and AppVeyor (#113)

    CHANGE: Delete operation on node/link will remove internal object (#173)

    CHANGE: Natvis: Add crude_json::value visualization

    NEW: All source components are now versioned

    NEW: Make view state independent of window resolution.

    NEW: Editor can now break links connected specified node or pin
        New API:
        int BreakLinks(NodeId nodeId);
        int BreakLinks(PinId pinId);

    NEW: Editor can now tell if node or pin has any links attached
        New API:
        bool HasAnyLinks(NodeId nodeId);
        bool HasAnyLinks(PinId pinId);